---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: 06. 01. 2018
  Changes:
    - Updated for Factorio 0.16